# bevy_workbench

./: .gitignore  CHANGELOG.md  Cargo.toml  readme.md  readme_zh-hans.md  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  refactor-request.md
.github/workflows/: ci.yml
examples/: common.rs  control_link.rs  minimal.rs
locales/: en.ftl  zh-CN.ftl
src/: bench_ui.rs  config.rs  console.rs  dock.rs  font.rs  game_view.rs  i18n.rs  inspector.rs  keybind.rs  layout.rs  lib.rs  menu_bar.rs  mode.rs  prelude.rs  theme.rs  undo.rs
src/dock/: persistence.rs  ui.rs
src/menu_bar/: keybindings_panel.rs  settings_panel.rs
