[package]
name = "bevy_workbench"
version = "0.1.0"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A mid-level editor scaffold for Bevy, between bevy-inspector-egui and Unity/Godot"

[dependencies]
bevy = "0.18"
bevy_egui = { version = "0.39", features = ["render"] }
bevy-inspector-egui = "0.36"
egui_tiles = { version = "0.14", features = ["serde"] }
egui = "0.33"
catppuccin-egui = { version = "5.7", default-features = false, features = ["egui33"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rfd = "0.17"
fluent = "0.17"
fluent-bundle = "0.16"
unic-langid = "0.9"
sys-locale = "0.3"

[dev-dependencies]
bevy = "0.18"
